# r-opencv

./: ProjectHome.md
ropencv/: DESCRIPTION  LICENSE  Makefile  NEWS  configure  configure.ac
ropencv/R/: miscFunc.R
ropencv/src/: Makevars.in  config.h.in  display.cpp  miscC.c  ropencv.h
ropencv/tests/: test.R
trunk/BioVision/: DESCRIPTION
trunk/ropencv/: DESCRIPTION  Makefile  NAMESPACE  NEWS  configure  configure.ac
trunk/ropencv/R/: miscFunc.R
trunk/ropencv/src/: Makevars.in  display.c  miscC.c  ropencv.h
